--- a/ARGO/ARGO.vcxproj
+++ b/ARGO/ARGO.vcxproj
@@ -64,7 +64,7 @@
     <ClInclude Include="State.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="dot.bmp" />
+    <Image Include="Left.bmp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
