--- a/ARGO/ARGO.vcxproj
+++ b/ARGO/ARGO.vcxproj
@@ -20,31 +20,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AISystem.cpp" />
-    <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="Assets.cpp" />
     <ClCompile Include="CollisionSystem.cpp" />
     <ClCompile Include="ControlSystem.cpp" />
+    <ClCompile Include="Dot.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Idle.cpp" />
-    <ClCompile Include="JumpLeft.cpp" />
-    <ClCompile Include="JumpRight.cpp" />
-    <ClCompile Include="Left.cpp" />
-    <ClCompile Include="LTexture.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="menu.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="LTexture.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
-    <ClCompile Include="Right.cpp" />
-    <ClCompile Include="splash.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AISystem.h" />
-    <ClInclude Include="Animation.h" />
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="Assets.h" />
     <ClInclude Include="CollisionComp.h" />
@@ -52,18 +42,12 @@
     <ClInclude Include="Component.h" />
     <ClInclude Include="ControlComponent.h" />
     <ClInclude Include="ControlSystem.h" />
-    <ClInclude Include="credits.h" />
+    <ClInclude Include="Dot.h" />
     <ClInclude Include="EntityComponent.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="HealthComponent.h" />
     <ClInclude Include="HealthSystem.h" />
-    <ClInclude Include="Idle.h" />
-    <ClInclude Include="JumpLeft.h" />
-    <ClInclude Include="JumpRight.h" />
-    <ClInclude Include="Left.h" />
-    <ClInclude Include="LTexture.h" />
-    <ClInclude Include="menu.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="LTexture.h" />
     <ClInclude Include="Particle.h" />
@@ -74,13 +58,7 @@
     <ClInclude Include="PositionSystem.h" />
     <ClInclude Include="PowerUp.h" />
     <ClInclude Include="RenderSystem.h" />
-    <ClInclude Include="Right.h" />
-    <ClInclude Include="splash.h" />
     <ClInclude Include="SpriteComponent.h" />
-    <ClInclude Include="State.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="Left.bmp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
