--- a/ARGO/ARGO.vcxproj
+++ b/ARGO/ARGO.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="PowerUp.h" />
     <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="Right.h" />
+    <ClInclude Include="ScoreComponent.h" />
     <ClInclude Include="splash.h" />
     <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="State.h" />
