--- a/ARGO/ARGO.vcxproj
+++ b/ARGO/ARGO.vcxproj
@@ -19,7 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AISystem.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="Assets.cpp" />
@@ -38,6 +37,7 @@
     <ClCompile Include="LTexture.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
+    <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="Right.cpp" />
     <ClCompile Include="splash.cpp" />
@@ -45,6 +45,8 @@
   <ItemGroup>
     <ClInclude Include="AIComponent.h" />
     <ClInclude Include="AISystem.h" />
+    <ClInclude Include="AmmoComponent.h" />
+    <ClInclude Include="AmmoSystem.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="Assets.h" />
@@ -75,6 +77,7 @@
     <ClInclude Include="PositionComponent.h" />
     <ClInclude Include="PositionSystem.h" />
     <ClInclude Include="PowerUp.h" />
+    <ClInclude Include="Projectile.h" />
     <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="Right.h" />
     <ClInclude Include="ScoreComponent.h" />
