--- a/ARGO/ARGO.vcxproj.filters
+++ b/ARGO/ARGO.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="AISystem.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="Assets.cpp" />
@@ -23,6 +22,7 @@
     <ClCompile Include="Right.cpp" />
     <ClCompile Include="splash.cpp" />
     <ClCompile Include="Fuzzy.cpp" />
+    <ClCompile Include="Projectile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIComponent.h" />
@@ -63,6 +63,9 @@
     <ClInclude Include="splash.h" />
     <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="State.h" />
+    <ClInclude Include="AmmoComponent.h" />
+    <ClInclude Include="Projectile.h" />
+    <ClInclude Include="AmmoSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Left.bmp" />
