--- a/ARGO/ARGO.vcxproj.filters
+++ b/ARGO/ARGO.vcxproj.filters
@@ -82,6 +82,9 @@
     <ClCompile Include="Level.cpp">
       <Filter>src\LevelLoader</Filter>
     </ClCompile>
+    <ClCompile Include="GameOver.cpp">
+      <Filter>src\Screens</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -224,6 +227,9 @@
     </ClInclude>
     <ClInclude Include="Level.h">
       <Filter>Header\LevelLoader</Filter>
+    </ClInclude>
+    <ClInclude Include="GameOver.h">
+      <Filter>Header\Screens</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
