--- a/ARGO/ARGO.vcxproj
+++ b/ARGO/ARGO.vcxproj
@@ -103,7 +103,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{94CB73CD-D4DA-489D-97D0-69649406AA22}</ProjectGuid>
     <RootNamespace>ARGO</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -155,7 +155,7 @@
     <LibraryPath>C:\SDL2\lib;$(LibraryPath)</LibraryPath>
     <IncludePath>C:\SDL2_image-2.0.3\include;C:\SDL2-2.0.8\include;TMX_Lite\include;$(IncludePath)</IncludePath>
     <LibraryPath>TMX_Lite\lib;C:\SDL2-2.0.8\lib\x86;$(LibraryPath)</LibraryPath>
-    <IncludePath>include;TMX_Lite\include;TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
+    <IncludePath>TMX_Lite\include;TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
     <LibraryPath>TMX_Lite\lib;TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -163,7 +163,7 @@
     <LibraryPath>TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>include;TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;C:\SDL2_mixer\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
+    <IncludePath>TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;C:\SDL2_mixer\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
     <LibraryPath>TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
